# raylib-w-py

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
src/raylib/: rcore.py  rshapes.py  rtext.py  rtextures.py
src/raylibwpy/: __init__.py  raylib_w_py.c  raylib_w_py.h
src/raylibwpy/modules/: rcore_w_py.c  rshapes_w_py.c  rstructs_w_py.c  rtext_w_py.c  rtextures_w_py.c
tests/: 2d_camera.py  basic_window.py  random_values.py  simple_draw.py  simple_test.py  struct_test.py
